--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,6 @@ install:
     - "pip install -r Bevut/requirements.txt"
 
 script:
-    - "find Bdevut/ -name \*.py -exec flake8 --max-line-length 120 {} +"
+    - "find Bdevut/ -name \\*.py -exec flake8 --max-line-length 120 {} +"
     - "python Bevut/manage.py test"
 
